// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkGraphicPromo should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-graphic-promo"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-graphic-promo"
    testid="123"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;

exports[`BpkGraphicPromo should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-graphic-promo custom-classname"
  >
    I am an example component.
  </div>
</DocumentFragment>
`;
